Add password reset functionality
The code changes include adding a password reset feature in the system. This includes providing views and URL patterns for resetting password. Moreover, several new related templates have been added and email configuration has been done in settings for user notification. Also, the login page now includes a "Forget Password" link.

--- a/website/templates/reset_password_complete.html
+++ b/website/templates/reset_password_complete.html
@@ -1,13 +1,18 @@
 {% load static %}
 {% include 'inner-header.html' %}
+
 <div class="container">
   <div class="row justify-content-center mb-4">
-    <div class="col-md-3">
+    <div class="col-md-5">
       <div class="card">
         <div class="card-header header-bg-color-dark text-white">
-          Login
+          Password reset complete
         </div>
         <div class="card-body">
+            <p>
+                Your password has been reset. You may log in now.
+            </p>
+            <p>
           <form method="POST" action="{% url 'login' %}" class="d-flex flex-column">
             {% csrf_token %}
             <div class="row">
@@ -25,13 +30,12 @@
                 <button type="submit" class="btn lg-button-yellow">Login</button>
               </div>
             </div>
-            <div>
-              <a href="{% url 'reset_password' %}">Forget Password</a>
-            </div>
           </form>
+            </p>
         </div>
       </div>
     </div>
   </div>
 </div>
+
 {% include 'footer.html' %}
