Update user login page and add password reset form
Changed the color of the "Forget Password" link on the user login page for better visibility. Additionally, a new 'password_reset_form.html' has been added to facilitate users who want to reset their passwords. This form includes necessary fields for users to enter their email address and submit the form.

--- a/website/templates/user_login.html
+++ b/website/templates/user_login.html
@@ -26,7 +26,7 @@
               </div>
             </div>
             <div>
-              <a href="{% url 'reset_password' %}">Forget Password</a>
+              <a href="{% url 'reset_password' %}" style="color: black;">Forget Password</a>
             </div>
           </form>
         </div>
