--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -40,6 +40,15 @@
             <li><a class="dropdown-item" href="/user/portfolio/add">Add/Edit Portfolio</a></li>
           </ul>
         </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Article
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{% url 'add_article' %}">Add Article</a></li>
+            <li><a class="dropdown-item" href="{% url 'list_articles' %}">List Articles</a></li>
+          </ul>
+        </li>
       </ul>
       <form class="d-flex w-100" method="POST" action="{% url 'job_search' %}">
                 {% csrf_token %}
