--- a/website/templates/edit_article.html
+++ b/website/templates/edit_article.html
@@ -8,7 +8,7 @@
           </div>
           <div class="col 8">
               <h3>Add Article</h3>
-                <form method="POST" action="{% url 'add_article' %}">
+                <form method="POST" action="{% url 'edit_article' article.id %}">
                     {% csrf_token %}
                     <div class="mb-3">
                         {{ form.draft }} Draft
