--- a/website/templates/list_articles.html
+++ b/website/templates/list_articles.html
@@ -13,6 +13,7 @@
                   <tr>
                       <th scope="col">Title</th>
                       <th scope="col">View</th>
+                      <th scope="col">Status</th>
                       <th scope="col" class="text-center">Edit</th>
                   </tr>
                   </thead>
@@ -21,6 +22,15 @@
                   <tr id="delete-message-{{ message.id }}">
                       <td>
                           {{ article.title }}
+                      </td>
+                      <td>
+                          {% if article.draft %}
+                            Draft
+                          {% elif article.approved %}
+                            Approved
+                          {% else %}
+                            Pending
+                          {% endif %}
                       </td>
                       <td class="text-center">
                           <a href="{% url 'view_article' article.id %}">
