--- a/website/templates/ai_cover_letter.html
+++ b/website/templates/ai_cover_letter.html
@@ -1,5 +1,26 @@
 
-<br />
-<p>
-    {{ cover_letter }}
-</p>
+<form method="POST" action="/user/apply/job/3">
+                          <input type="hidden" name="csrfmiddlewaretoken" value="6nLW12pegrR24lQLDlPN0mXUTNmXHGOYyjp6bYlfa7ba9fbWCAi59bMdUvpHmaU7">
+                          <textarea name="cover_letter" cols="40" rows="10" id="id_cover_letter" hidden="true" style="display: none;">
+    {{ cover_letter | safe }}
+                          </textarea><script>
+var settings_id_cover_letter = {"width": "100%", "height": "480", "toolbar": [["style", ["style"]], ["font", ["bold", "italic", "underline", "clear"]], ["fontname", ["fontname"]], ["fontsize", ["fontsize"]], ["color", ["color"]], ["para", ["ul", "ol", "paragraph"]], ["table", ["table"]], ["insert", ["link", "picture", "video"]], ["view", ["fullscreen", "codeview"]]], "lang": "en-US", "url": {"language": "/static/summernote/lang/summernote-en-US.min.js", "upload_attachment": "/summernote/upload_attachment/"}};
+</script>
+<style>
+iframe.note-fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw!important;
+  height: 100vh!important;
+  z-index: 4000;
+}
+</style>
+<div class="summernote-div" cols="40" rows="10" width="100%" height="480">
+  <iframe id="id_cover_letter_iframe" src="/summernote/editor/id_cover_letter/" frameborder="0" width="100%" height="480" style="height: 480px;"></iframe>
+</div>
+
+  <div class="col d-flex justify-content-end">
+      <button type="submit" class="btn btn-primary mb-2">Apply Now</button>
+  </div>
+</form>
