--- a/website/templates/manual_cover_letter.html
+++ b/website/templates/manual_cover_letter.html
@@ -1,4 +1,4 @@
-<form method="POST" action="#">
+<form method="POST" action="{% url 'apply_job' job_id %}">
   {% csrf_token %}
   {{ form.cover_letter }}
   <div class="col d-flex justify-content-end">
