Update message viewing and fetching queries
The main change in the update is on how messages are fetched and viewed. Previously, the system would only display and fetch messages that a user is the recipient of. Now, it's adjusted to fetch and display both sent and received messages. Read and unread messages are distinguished using different buttons on the recruiter's profile page.

--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -14,7 +14,7 @@
                   <thead class="table-dark">
                   <tr>
                       <th scope="col">From</th>
-                      <th scope="col">Subject</th>
+                      <th scope="col">Subject / Message</th>
                       <th scope="col" class="text-center">View</th>
                       <th scope="col" class="text-center">Delete</th>
                   </tr>
@@ -25,15 +25,22 @@
                       <td>{{ message.from_user.first_name }} {{ message.from_user.last_name }}</td>
                       <td>
                           {{ message.subject }}
-                            <div id="message-row-{{ message.id }}"></div>
                       </td>
                       <td class="text-center">
-                          <button
-                                  hx-get="{% url 'view_message' message.id %}"
-                                  hx-target="#message-row-{{ message.id }}"
-                                  hx-swap="innerHTML"
-                                  class="btn md-yellow-button">View
-                          </button>
+                          {% if message.read %}
+                          <a href="{% url 'view_message' message.id %}">
+                              <button
+                                      class="btn md-yellow-button">View
+                              </button>
+                          </a>
+                          {% else %}
+                          <a href="{% url 'view_message' message.id %}">
+                              <button
+
+                                      class="btn btn-sm btn-success">Read
+                              </button>
+                          </a>
+                          {% endif %}
                       </td>
                       <td class="text-center">
                           <button
