Refactor HTML and update user save status in views
HTML formatting on the "resume.html" and "all_jobs.html" files have been updated for better readibility. In "views.py", code has been added to fetch user save status to determine if a user has been saved or not and pass the status in the context. The file "all_jobs.html" also includes a different template (from 'personal_info.html' to 'recruiters/recruiter_info.html').

--- a/website/templates/recruiters/all_jobs.html
+++ b/website/templates/recruiters/all_jobs.html
@@ -4,7 +4,7 @@
 <div class="container">
         <div class="row mb-5">
           <div class="col-4">
-              {% include 'personal_info.html' %}
+              {% include 'recruiters/recruiter_info.html' %}
           </div>
 
           <div class="col 8">
