--- a/website/templates/user_page/resume.html
+++ b/website/templates/user_page/resume.html
@@ -106,8 +106,7 @@
                             hx-target="#saved-user"
                             hx-swap="innerHTML"
                             class="btn btn-primary"
-                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                        Save Resume</button>
+                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Resume</button>
                     </div>
                     {% endif %}
                     <div class="mt-2">
@@ -117,7 +116,8 @@
                             hx-swap="innerHTML"
                             class="btn btn-primary"
                             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">
-                        Message User</button>
+                        Message User
+                    </button>
                     </div>
                 {% endif %}
         {% else %}
