--- a/website/templates/apply_job.html
+++ b/website/templates/apply_job.html
@@ -56,40 +56,45 @@
                       </p>
                       </div>
 
+                              <div id="manual-cover-letter"></div>
+                              <div id="ai-cover-letter"></div>
+                              <div class="d-flex justify-content-between">
+                                  <div class="mx-3">
+                                      <button
+                                              id="cover-letter-button"
+                                              hx-get="{% url 'manual_cover_letter' jobinfo.job.id %}"
+                                              hx-target="#manual-cover-letter"
+                                              hx-swap="innerHTML"
+                                              class="btn md-yellow-button mb-2"
+                                              onclick="disableJeffreyButton()">
+                                          Cover Letter
+                                      </button>
+                                  </div>
+                                  <div class="mx-3">
+                                      <button
+                                              id="jeffrey-button"
+                                              hx-get="{% url 'ai_cover_letter' jobinfo.job.id %}"
+                                              hx-target="#ai-cover-letter"
+                                              hx-swap="innerHTML"
+                                              class="btn md-yellow-button mb-2"
+                                              onclick="disableCoverLetterButton()">
+                                          Jeffrey
+                                      </button>
+                                  </div>
+                              </div>
 
-                            <div id="manual-cover-letter"></div>
-                                    <div class="mx-3">
-                                        <button
-                                            hx-get="{% url 'manual_cover_letter' jobinfo.job.id %}"
-                                            hx-target="#manual-cover-letter"
-                                            hx-swap="innerHTML"
-                                            class="btn md-yellow-button mb-2">
-                                            Cover Letter
-                                        </button>
-                                    </div>
-
-                            <div id="ai-cover-letter"></div>
-                                <div class="d-flex justify-content-end">
-                                    <div class="mx-3">
-                                        <button
-                                            id="jeffrey-button"
-                                            hx-get="{% url 'ai_cover_letter' jobinfo.job.id %}"
-                                            hx-target="#ai-cover-letter"
-                                            hx-swap="innerHTML"
-                                            class="btn md-yellow-button mb-2"
-                                            onclick="disableButton()">
-                                            Jeffrey
-                                        </button>
-                                    </div>
-                                </div>
-                                <script>
-                                    function disableButton() {
-                                        var button = document.getElementById('jeffrey-button');
-                                        button.disabled = true;
-                                        button.innerText = "Please give me a few seconds to work on your cover letter.";
-                                    }
-                                </script>
-
+                            <script>
+                                function disableJeffreyButton() {
+                                    document.getElementById('jeffrey-button').disabled = true;
+                                    document.getElementById('cover-letter-button').disabled = false;
+                                }
+                                function disableCoverLetterButton() {
+                                    let button = document.getElementById('jeffrey-button');
+                                    document.getElementById('cover-letter-button').disabled = true;
+                                    document.getElementById('jeffrey-button').disabled = false;
+                                    button.innerText = "Please give me a few seconds to work on your cover letter.";
+                                }
+                            </script>
 
                   </div>
 
