--- a/website/templates/manual_cover_letter.html
+++ b/website/templates/manual_cover_letter.html
@@ -2,6 +2,6 @@
   {% csrf_token %}
   {{ form.cover_letter }}
   <div class="col d-flex justify-content-end">
-      <button type="submit" class="btn btn-primary">Apply Now</button>
+      <button type="submit" class="btn btn-primary mb-2">Apply Now</button>
   </div>
 </form>
