Add styling for LinkedIn URL and conditionally render it
The updates in this commit add CSS styling for LinkedIn URLs and only render these links if they exist. New conditional statements have been included in the user_page, user_listings, and user_resume templates to check for the presence of the LinkedIn URL.

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1578,6 +1578,14 @@ Tech Artisan Custom CSS
     margin-top: 100px;
 }
 
+.linkedin-url {
+   color: #0a53be;
+}
+
+.linkedin-url:hover {
+    color: #00b3ff;
+}
+
 .md-yellow-button {
     --bs-btn-padding-y: .25rem;
     --bs-btn-padding-x: .5rem;
