Add AI Tokens functionality to User accounts
The commit includes the addition of an AIToken system where newly registered and verified users are allocated 25 tokens. These tokens are necessary for accessing certain features like submitting applications and are displayed to the user. After each use, the number of tokens is reduced appropriately. Minor changes were also made to website titles, sign-up buttons, and default search placeholder text.

--- a/website/templates/apply_job.html
+++ b/website/templates/apply_job.html
@@ -71,6 +71,7 @@
                                       </button>
                                   </div>
                                   <div class="mx-3">
+                                      {% if ai_token %}
                                       <button
                                               id="jeffrey-button"
                                               hx-get="{% url 'ai_cover_letter' jobinfo.job.id %}"
@@ -80,6 +81,7 @@
                                               onclick="disableCoverLetterButton()">
                                           Jeffrey
                                       </button>
+                                      {% endif %}
                                   </div>
                               </div>
 
