--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gp Bootstrap Template - Index</title>
+  <title>Tech Artisan Hub</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -53,7 +53,7 @@
               <a href="{% url 'logout' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Logout</a>
               {% else %}
               <a href="{% url 'login_page' %}" class="get-started-btn scrollto" style="margin-right: 10px;">Login</a>
-              <a href="{% url 'home' %}" class="get-started-btn scrollto">Sign Up</a>
+              <a href="{% url 'register' %}" class="get-started-btn scrollto">Sign Up</a>
               {% endif %}
           </div>
       </div>
