--- a/website/templates/email_verification_success.html
+++ b/website/templates/email_verification_success.html
@@ -4,7 +4,8 @@
   <div class="row justify-content-center mb-4">
     <div class="col-md-3">
         <p>
-            Your email has been verified. Please login and add personal information to start your profile.
+            Your email has been verified. Please login and add personal information to start your profile.<br />
+            We have started you with 25 AI Tokens.
         </p>
       <div class="card">
         <div class="card-header header-bg-color-dark text-white">
