Add AI/Tokens page and navigational link
Implemented a feature to display user's AI tokens balance. A new 'AI/Tokens' link has been added to the user navigation bar leading to a dedicated page. This page provides information regarding the use of AI tokens for accessing various services and displays the user's current balance of tokens.

--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -11,6 +11,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'user_profile' %}">ViewProfile</a></li>
             <li><a class="dropdown-item" href="{% url 'edit_personalinfo' user.id %}">Edit Profile</a></li>
+            <li><a class="dropdown-item" href="{% url 'ai_info' %}">AI/Tokens</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
