--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -30,6 +30,7 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="{% url 'user_page' user.username %}">View Resume</a></li>
             <li><a class="dropdown-item" href="{% url 'edit_resume' %}">Edit Resume</a></li>
+            <li><a class="dropdown-item" href="{% url 'ai_resume' %}">AI Resume</a></li>
           </ul>
         </li>
         <li class="nav-item dropdown">
