Update education form to use AJAX
Education form has been updated to use AJAX for form submission, and a new class has been added for identifying education rows for AJAX replacements. The edited education section of the user's profile will be updated without the need for a page refresh. Changes have been made directly in the templates via the usage of select attributes and the HttpResponse('') method in the view.

--- a/users/templates/ai_edit_education.html
+++ b/users/templates/ai_edit_education.html
@@ -1,4 +1,4 @@
- <form>
+<form hx-post="{% url 'ai_edit_education' edu_id %}" hx-trigger="submit">
     {% csrf_token %}
     <div class="mb-3">
         {{ form.title }}
@@ -13,6 +13,9 @@
         {% endfor %}
     </div>
     <div>
-        <button type="submit" class="btn btn-secondary">Save</button>
+       <button
+            hx-target=".education-row"
+            hx-swap="innerHTML"
+            class="btn btn-secondary">Save</button>
     </div>
 </form>
