--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -54,7 +54,7 @@
                   <div class="card-body">
                     <div id="edit-education"></div>
                     {% for edu in edus %}
-                    <div class="row row-cols-2">
+                    <div class="education-row row row-cols-2">
                       <div class="col"><h5>{{ edu.title }}</h5></div>
                       <div class="col d-flex justify-content-end">
 
