--- a/users/templates/education_snippet.html
+++ b/users/templates/education_snippet.html
@@ -8,8 +8,13 @@
             class="btn btn-primary mx-1"
             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit
         </button>
-        <a href="{% url 'delete_education' edu.pk %}"><button type="button" class="btn btn-danger mx-1"
-                                style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
+        <a href="{% url 'delete_education' edu.pk %}">
+            <button
+                    type="button"
+                    class="btn btn-danger mx-1"
+                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete
+            </button>
+        </a>
     </div>
     <p class="card-text">{{ edu.description }}</p>
 </div>
