Update function names and HTML elements in resume templates
The function 'add_education' was renamed to 'ai_add_education' in multiple files to create consistency. HTML elements in 'ai_resume.html' and 'ai_add_education.html' templates were also updated to improve user interaction. Commented out the function 'submit_new_education' in views.py for future revision.

--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -8,8 +8,8 @@
 
             <h1>Education:</h1>
               <button
-                      hx-get="{% url 'add_education' %}"
-                      hx-target="next body"
+                      hx-get="{% url 'ai_add_education' %}"
+                      hx-target="next tbody"
                       hx-swap="afterbegin"
                       class="btn btn-success btn-sm">Add
               </button>
