--- a/users/templates/ai_add_education.html
+++ b/users/templates/ai_add_education.html
@@ -13,9 +13,7 @@
             hx-include="closest tr"
             hx-encoding="multipart/form-data"
             class="text-secondary">
-            <svg class="bi bi-check-lg me-2" width="32" height="32">
-                <use xlink:href="#checkmark"/>
-            </svg>
+            Add
         </a>
     </td>
     <td><a href="#"
@@ -23,9 +21,7 @@
             hx-target="closest tr"
             hx-swap="outerHTML"
             class="text-secondary">
-            <svg class="bi bi-x-lg me-2" width="32" height="32">
-                <use xlink:href="#cancel"/>
-            </svg>
+            Cancel
         </a>
     </td>
 </tr>
