--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -18,7 +18,7 @@
                    hx-target="this"
                    hx-swap="innerHTML"
                    hx-get="{% url 'get_education_list' %}"
-                   hx-trigger="load delay:1s">
+                   hx-trigger="load">
               </div>
                 <div class="d-flex justify-content-center">
                   <div id="spinner" class="spinner-border htmx-indicator" role="status">
