--- a/users/templates/ai_add_experience.html
+++ b/users/templates/ai_add_experience.html
@@ -3,28 +3,20 @@
         <div class="col-lg-12">
                 <div class="mb-3">
                     {{ form.company }}
-                    {% for error in form.company.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                    {% endfor %}
+                    {{ form.company.errors }}
                 </div>
                 <div class="mb-3">
                     {{ form.position }}
-                    {% for error in form.position.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                    {% endfor %}
+                    {{ form.position.errors }}
                 </div>
                 <div class="row g-3 mb-3">
                     <div class="col-md-6">
                         {{ form.start_month }}
-                        {% for error in form.start_month.errors %}
-                        <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
+                        {{ form.start_month.errors }}
                     </div>
                     <div class="col-md-6">
                         {{ form.start_year}}
-                        {% for error in form.start_year.errors %}
-                        <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
+                        {{ form.start_year.errors }}
                     </div>
                 </div>
                 <div class="row g-3 mb-3">
@@ -47,9 +39,7 @@
                 </div>
                 <div class="mb-3">
                     {{ form.task_one }}
-                    {% for error in form.task_one.errors %}
-                    <span class="text-danger">{{ error }}</span>
-                    {% endfor %}
+                    {{ form.task_one.errors }}
                 </div>
                 <div class="mb-3">
                     {{ form.task_two }}
@@ -79,14 +69,16 @@
                     {{ form.task_ten }}
                 </div>
                 <div class="d-flex justify-content-end">
+                <a href="#"
+                    hx-post="{% url 'add_experience_submit' %}"
+                    hx-target="#exp-list"
+                    hx-swap="outerHTML"
+                    hx-include="#exp-list"
+                    hx-encoding="multipart/form-data"
+                    class="text-secondary">
+                    Add
+                </a>
 
-                    <button
-                            hx-post="{% url 'add_experience_submit' %}"
-                            hx-target="#exp-list"
-                            hx-swap="outerHTML"
-                            hx-include="exp-list"
-                            class="btn md-yellow-button">Save
-                    </button>
                 </div>
         </div>
     </div>
