--- a/users/templates/experience_row.html
+++ b/users/templates/experience_row.html
@@ -14,10 +14,20 @@
         {% endif %}
       </div>
       <div class="col d-flex justify-content-end  ">
-        <a href="{% url 'edit_experience' exp.pk %}"><button type="button" class="btn btn-primary mx-1"
-                                                             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
-        <a href="{% url 'delete_experience' exp.pk %}"><button type="button" class="btn btn-danger mx-1"
-                                                               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
+          <button
+                  hx-get="{% url 'ai_edit_experience' exp.pk %}"
+                  hx-target="#exp-list"
+                  hx-swap="outerHTML"
+                  class="btn btn-primary mx-1"
+                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit
+          </button>
+          <button
+                  hx-confirm="Are you sure"
+                  hx-target="#exp-list"
+                  hx-swap="outHTML swap:ls"
+                  hx-delete="{% url 'ai_delete_experience' exp.pk %}"
+                  class="btn btn-danger mx-1"
+                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
       </div>
     </div>
 
