--- a/users/templates/education_row.html
+++ b/users/templates/education_row.html
@@ -14,7 +14,7 @@
       <button
               hx-confirm="Are you sure"
               hx-target="closest tr"
-              hx-swap="outHTML swap:ls"
+              hx-swap="outerHTML swap:ls"
               hx-delete="{% url 'delete_education' education.id %}"
               class='btn btn-primary btn-sm'>
           Delete
