--- a/users/templates/experience_list.html
+++ b/users/templates/experience_list.html
@@ -1,6 +1,6 @@
 
 <div id="exp-list">
-    {% for exp in experience_info %}
+    {% for experience in experience_info %}
         {% include 'experience_row.html' %}
     {% endfor %}
 </div>
