--- a/users/templates/experience_row.html
+++ b/users/templates/experience_row.html
@@ -3,19 +3,19 @@
     <!-- First row with 2 columns -->
     <div class="row rows-cols-3">
       <div class="col">
-        <div><h5>{{ exp.company }}</h5></div>
+        <div><h5>{{ experience.company }}</h5></div>
       </div>
       <div class="col d-flex justify-content-end">
-        {{ exp.start_month }}-{{ exp.start_year}}
-        {% if exp.currently_working %}
+        {{ experience.start_month }}-{{ experience.start_year}}
+        {% if experience.currently_working %}
         Current
         {% else %}
-        {{ exp.end_month }}-{{ exp.end_year}}
+        {{ experience.end_month }}-{{ experience.end_year}}
         {% endif %}
       </div>
       <div class="col d-flex justify-content-end  ">
           <button
-                  hx-get="{% url 'ai_edit_experience' exp.pk %}"
+                  hx-get="{% url 'ai_edit_experience' experience.id %}"
                   hx-target="closest .container"
                   hx-swap="outerHTML"
                   class="btn btn-primary mx-1"
@@ -24,8 +24,8 @@
           <button
                   hx-confirm="Are you sure"
                   hx-target="closest .container"
-                  hx-swap="outHTML swap:ls"
-                  hx-delete="{% url 'ai_delete_experience' exp.pk %}"
+                  hx-swap="outerHTML swap:ls"
+                  hx-delete="{% url 'ai_delete_experience' experience.id %}"
                   class="btn btn-danger mx-1"
                   style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button>
       </div>
@@ -35,18 +35,18 @@
     <div class="row">
       <div>
         <div>
-          <strong>{{ exp.position }}</strong><br />
+          <strong>{{ experience.position }}</strong><br />
           <ul>
-            <li>{{ exp.task_one }}</li>
-            {% if exp.task_two %} <li>{{ exp.task_two }}</li> {% endif %}
-            {% if exp.task_three %} <li>{{ exp.task_three }}</li> {% endif %}
-            {% if exp.task_four %} <li>{{ exp.task_four }}</li> {% endif %}
-            {% if exp.task_five %} <li>{{ exp.task_five }}</li> {% endif %}
-            {% if exp.task_six %} <li>{{ exp.task_six }}</li> {% endif %}
-            {% if exp.task_seven %} <li>{{ exp.task_seven }}</li> {% endif %}
-            {% if exp.task_eight %} <li>{{ exp.task_eight }}</li> {% endif %}
-            {% if exp.task_nine %} <li>{{ exp.task_nine }}</li> {% endif %}
-            {% if exp.task_ten %} <li>{{ exp.task_ten }}</li> {% endif %}
+            <li>{{ experience.task_one }}</li>
+            {% if experience.task_two %} <li>{{ experience.task_two }}</li> {% endif %}
+            {% if experience.task_three %} <li>{{ experience.task_three }}</li> {% endif %}
+            {% if experience.task_four %} <li>{{ experience.task_four }}</li> {% endif %}
+            {% if experience.task_five %} <li>{{ experience.task_five }}</li> {% endif %}
+            {% if experience.task_six %} <li>{{ experience.task_six }}</li> {% endif %}
+            {% if eexperiencexp.task_seven %} <li>{{ experience.task_seven }}</li> {% endif %}
+            {% if experience.task_eight %} <li>{{ experience.task_eight }}</li> {% endif %}
+            {% if experience.task_nine %} <li>{{ experience.task_nine }}</li> {% endif %}
+            {% if experience.task_ten %} <li>{{ experience.task_ten }}</li> {% endif %}
           </ul>
         </div>
       </div>
