--- a/users/templates/experience_row.html
+++ b/users/templates/experience_row.html
@@ -1,7 +1,7 @@
 
   <div class="container">
     <!-- First row with 2 columns -->
-    <div class="row rows-cols-3">
+    <div class="row rows-cols-3 mt-2">
       <div class="col">
         <div><h5>{{ experience.company }}</h5></div>
       </div>
