--- a/users/templates/ai_resume.html
+++ b/users/templates/ai_resume.html
@@ -6,7 +6,7 @@
             <!-- First Column -->
           <div class="col 6">
 
-            <h1>Education</h1>
+            <h2>Education</h2>
               <button
                       hx-get="{% url 'ai_add_education' %}"
                       hx-target="next tbody"
@@ -20,9 +20,9 @@
                    hx-trigger="load">
               </div>
 
-            <h1>Experience</h1>
+            <h2>Experience</h2>
                <button
-                      hx-get="{% url 'ai_add_experience' %}"
+                      hx-get="{% url 'add_experience_submit' %}"
                       hx-target="#exp-list"
                       hx-swap="afterbegin"
                       class="btn btn-success btn-sm">Add
