--- a/users/templates/ai_add_experience.html
+++ b/users/templates/ai_add_experience.html
@@ -96,7 +96,7 @@
                 </a>
                 </div>
                 {% if messages %}
-                    <div class="alert alert-danger">
+                    <div class="alert alert-danger mt-3">
                             {% for message in messages %}
                                {{ message }}
                             {% endfor %}
