--- a/users/templates/ai_edit_experience.html
+++ b/users/templates/ai_edit_experience.html
@@ -93,8 +93,14 @@
                     hx-include="closest .container">
                     <div class="btn md-yellow-button">Submit</div>
                 </a>
-
                 </div>
+                {% if messages %}
+                    <div class="alert alert-danger mt-3">
+                            {% for message in messages %}
+                               {{ message }}
+                            {% endfor %}
+                    </div>
+                {% endif %}
         </div>
     </div>
 </div>
